<resources>
    <string name="app_name">نیرو محرکه مهاباد</string>
    <string name="brand_andprice">برند و قیمت</string>
    <string name="filter">فیلتر ها</string>
    <string name="sort">مرتب سازی</string>
    <string name="arzan_begeran">ارزان تر به گران تر</string>
    <string name="description">توضیحات</string>
    <string name="aboutus">درباره ما</string>
    <string name="category">دسته بندی</string>
    <string name="home">صفحه ی اصلی</string>
    <string name="khadamat">خدمات کارگاه</string>
    <string name="telchannel">کانال تلگرام</string>
    <string name="gallery">گالری</string>
    <string name="internet">دسترسی به اینترنت امکان پذیر نیست</string>
    <string name="exit">برای خروج دوباره کلیک کنید</string>
    <string name="noproduct">محصول برای این دسته بندی ثبت نشده است</string>
    <string name="nodocument">اطلاعات فنی برای این دسته بندی ثبت نشده است</string>
    <string name="fani_detail">اطلاعات فنی</string>
    <string name="error_msg_unknown">An unexpected error occurred</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="pleasewait">لطفا منتظر بمانید…</string>
    <string name="document">اطلاعات فنی</string>
    <string name="downloads">دانلود ها</string>
    <string name="search">جستجو</string>
    <string name="redownload">این فایل قبلا دانلود شده آیا مایلید دوباره دانلود کنید؟</string>
    <string name="wantdownload">دانلود میکنم</string>
    <string name="notdownload">دانلود نمیکنم</string>
    <string name="downloadprogress">در حال دانلود…</string>
    <string name="filedownloaded">فایل دانلود شد   قسمت دانلود ها فایل را باز کنید</string>
    <string name="errorindownload">خطا در دانلود</string>
    <string name="adobereader">Adobe Reader</string>
    <string name="needadobereader">شما نیاز به نرم افزار Adobe Reader دارید</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="deletefile">آیا میخواهید این فایل را حذف کنید؟</string>
    <string name="channelnotfound">کانال ثبت نشده است</string>
    <string name="address">آدرس کارگاه</string>
    <string name="codeDastgah">کد دستگاه: </string>
</resources>
